[package]
name = "updown_clone"
version = "0.1.0"
authors = ["Martichou <martichou.andre@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.1.1"
reqwest = "0.10.8"
openssl = "0.10.30"
dns-lookup = "1.0.5"
serde_json = "1.0.48"
error-chain = "0.12.4"
openssl-sys = "0.9.58"
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0.104", features = ["derive"] }